# PROG57370-Assignment-2

./: .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt  Makefile
Engine/Engine/: AnimatedSprite.h  Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AudioSystem.cpp  AudioSystem.h  BoxCollider.cpp  BoxCollider.h  CircleCollider.h  Collider.h  CollisionSystem.h  Color.cpp  Color.h  Component.cpp  Component.h  DebugDraw.cpp  DebugDraw.h  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  EngineCore.h  EngineMath.cpp  EngineMath.h  EngineTime.cpp  EngineTime.h  Engine_Register.cpp  Entity.cpp  Entity.h  FontAsset.cpp  FontAsset.h  FontSprite.cpp  FontSprite.h  IRenderable.h  ISerializable.h  InputSystem.cpp  InputSystem.h  MusicAsset.cpp  MusicAsset.h  (+31 more)
GameProject/: CMakeLists.txt  Makefile
GameProject/GameProject/: Asteroid.cpp  Asteroid.h  AsteroidFactory.h  AsteroidSpawner.cpp  AsteroidSpawner.h  GameCore.h  GameManager.cpp  GameManager.h  GameOver.h  GameProject.vcxproj  GameProject.vcxproj.filters  Game_Register.cpp  Player.cpp  Player.h  Projectile.cpp  Projectile.h  main.cpp
GameProject/enc_temp_folder/7b22cdc62dcfa5cc8b2a5749b39cc20/: GameCore.h
GameProject/enc_temp_folder/b25658c25838979ce59693e9a29fd3a7/: Game_Register.cpp
